<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amcl_auto_localization</name>
  <version>0.0.1</version>
  <description>Auto localization node for nav2 stack with amcl</description>
  <maintainer email="pawel.kowalski@husarion.com">root</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>navigation2</build_depend>
  <exec_depend>navigation2</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
